# Pekmun2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.sh
assets/: file_select.json  naming_screen.json  stats.json  test_map.json  test_map2.json
assets/maps/arena/: info.json  tiles.json
assets/maps/cross/: info.json  tiles.json
assets/maps/test_layers/: info.json  tiles.json
assets/maps/test_map/: info.json  tiles.json
assets/raw_maps/: arena.json  cross.json  test_layers.json  test_map.json
cmake/: devkitarm.cmake
cpp_experiments/: health_bar_test.cpp  huffman_data.hpp  huffman_test.cpp  layers.cpp  layers2.cpp  rotate.cpp  rotate2.cpp  scrolling.cpp  sound_test.cpp
py_experiments/: test_layers.py
py_tests/: test_layers.py
scripts/: make_map.py  process_bitmap_image.py  process_fullscreen_tilemap.py  process_image.py  process_image_directory.py  process_map.py
src/: battle.cpp  battle.hpp  classes.hpp  common_funcs.cpp  common_funcs.hpp  constants.hpp  data.hpp  gba.hpp  main.cpp  map_data.cpp  map_data.hpp  pathfinding.cpp  pathfinding.hpp  save_data.hpp  static_vector.hpp
